# market-structure-notes

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  ROADMAP.md  project.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: btc-4h-bullish.md  eth-1h-range.md  sol-15m-failed-breakout.md
msn/: __init__.py  cli.py  store.py
notes/: .msn.json  2026-05-29-BTC-4H.md  2026-05-29-ETH-1D.md
preview/: server.py
preview/static/: index.html
scripts/: msn.py
templates/: macro.md  minimal.md  price-action.md  session.md  smc.md  volume-profile.md  wyckoff.md
