[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-structure-notes"
version = "1.0.0"
description = "Structured market structure note-taking tool with CLI and optional web viewer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Djani", email = "djani@waltermustang.dev"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1"]

[project.scripts]
msn = "msn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["msn"]