[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-structure-notes"
version = "0.2.0"
description = "Market Structure Notes — CLI + web tool for Wyckoff/SMC/ICT analysis with status, P&L tracking, and searchable metadata (v0.1 complete)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Djani", email = "djani@waltermustang.dev"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1"]

[project.scripts]
msn = "msn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["msn"]